# kbeo

./: README.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: main.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/nexus/kernel/manager/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
